Replace toList() with older languages feature.